2007-12-18  Ævar Arnfjörð Bjarmason  <avar@cpan.org> (0.04)

	* POSIX.xs: Make split // use RXf_NULL
	* t/split-null.t: This test now works since it uses pp_split
	* TODO: Removed
	* Makefile.PL: Using ExtUtils::MakeMaker instead of Module::Install
	* inc/: Removed

2007-07-12  Ævar Arnfjörð Bjarmason  <avar@cpan.org> (0.03)

	* POSIX.pm: Updated various stuff in the docs
	* POSIX.xs: Now supports split // and m//g (always sets rx->offs correctly)
	* t/s.t, t/split.t, t/subexp.t: Modified test from ::PCRE
	* t/split-null.t: Failing test for split //
	* META.yml: Literal encoding for author name

2007-07-11  Ævar Arnfjörð Bjarmason  <avar@cpan.org> (0.02)

	* Makefile.PL: Minor cleanup
	* POSIX.(pm|xs): Updated to pass the tests on current blead, still not
	                 complete wrt s/// and split //
	* POSIX.h: New header file for POSIX.xs

2007-02-21  Ævar Arnfjörð Bjarmason  <avar@cpan.org> (0.01)

	* Initial release